# loothing-parser

./: .dockerignore  .env  .env.backup.20250921_144435  .env.backup.20250921_144523  .env.backup.20250921_145139  .env.example  .env.production  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  EXISTING_SCHEMA_ADAPTER.md  GUILD_MANAGEMENT.md  HIERARCHICAL_STRUCTURE.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  analyze_absorbed.py  auto_install.sh  boundary_debug.py  count_events.py  debug_absorbed.py  debug_character_healing.py  debug_characters.py  debug_damage_parsing.py  debug_healing.py  debug_params.py  debug_pipeline.py  debug_route_event.py  debug_schema.py  diagnostic_deep_dive.py  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  fix_db.py  grafana.Dockerfile  install.sh  nginx-simple.conf  (+55 more)
.claude/: settings.json  settings.local.json
config/: wow_config.yaml.example
data/: combat_logs.db-shm  combat_logs.db-wal
docs/: DEPLOYMENT.md  GUILD_MANAGEMENT.md  MIGRATION_GUIDE.md  existing_schema_integration.md
examples/: test_existing_schema_adapter.py
examples/api/: python_examples.py
loothing_parser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
monitoring/: prometheus.yml
research/: gemini-deepsearch.md
scripts/: integrate_existing_schema.py  monitor.py  test_integration.py
src/: __init__.py  cli.py
src/analyzer/: __init__.py  death_analyzer.py  displays.py  interactive.py  metrics.py  navigation.py  timeline.py
src/api/: __init__.py  app.py  auth.py  models.py  streaming_server.py
src/cache/: __init__.py  redis_client.py
src/config/: __init__.py  existing_schema_config.py  loader.py  settings.py  wow_data.py
src/database/: __init__.py  compression.py  existing_schema_adapter.py  hybrid_manager.py  influx_manager.py  (+5 more)
ssl/: cert.pem  key.pem
storage/: raft_state.json
test-suite/: .env.test  docker-compose.test.yml
tests/: __init__.py  conftest.py  test_authentication.py  test_authentication_guild.py  test_combat_periods.py  test_compression.py  test_database_guild.py  test_migration_guild.py  test_performance_guild.py  test_query_api.py  test_real_data.py  test_streaming_pipeline.py  test_websocket.py
(+101 files in other folders)
